# asphalt-serialization

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.rst  conda-environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeqa-test.yml  test.yml
asphalt/serialization/: api.py  component.py  marshalling.py  object_codec.py
asphalt/serialization/serializers/: cbor.py  json.py  msgpack.py  pickle.py  yaml.py
docs/: api.rst  conf.py  configuration.rst  extending.rst  index.rst  requirements.txt  usage.rst  versionhistory.rst
docs/modules/: api.rst  component.rst  json.rst  marshalling.rst  object_codec.rst  pickle.rst  yaml.rst
docs/modules/serializers/: cbor.rst  msgpack.rst
examples/: custom_types.py  simple.py
src/asphalt/serialization/: __init__.py  _api.py  _component.py  _marshalling.py  _object_codec.py  api.py  component.py  marshalling.py  object_codec.py
src/asphalt/serialization/serializers/: cbor.py  json.py  msgpack.py  pickle.py  yaml.py
tests/: test_component.py  test_serializers.py
