[metadata]
name = asphalt-serialization
description = Serialization component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-serialization
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages =
    asphalt.serialization
    asphalt.serialization.serializers
install_requires =
    asphalt >= 3.0, < 5.0
    typeguard ~= 2.0

[options.extras_require]
msgpack = msgpack-python >= 0.4.6
cbor = cbor2 ~= 4.0
yaml = ruamel.yaml >= 0.12
test =
    pytest
    pytest-cov
    pytest-catchlog
    pytest-asyncio >= 0.5.0
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.0.5
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    serialization = asphalt.serialization.component:SerializationComponent
asphalt.serialization.serializers =
    cbor = asphalt.serialization.serializers.cbor:CBORSerializer [cbor]
    json = asphalt.serialization.serializers.json:JSONSerializer
    msgpack = asphalt.serialization.serializers.msgpack:MsgpackSerializer [msgpack]
    pickle = asphalt.serialization.serializers.pickle:PickleSerializer
    yaml = asphalt.serialization.serializers.yaml:YAMLSerializer [yaml]

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.serialization
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
exclude = .tox,docs
ignore = E251
