[metadata]
name = asphalt-serialization
description = Serialization component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-serialization
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    = src
packages = find_namespace:
install_requires =
    asphalt ~= 4.6.0
    typeguard ~= 2.0

[options.packages.find]
where = src

[options.extras_require]
msgpack = msgpack ~= 1.0
cbor = cbor2 ~= 5.0
yaml = ruamel.yaml >= 0.15
test =
    pytest
    pytest-cov
    pytest-asyncio
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.0.5
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    serialization = asphalt.serialization.component:SerializationComponent
asphalt.serialization.serializers =
    cbor = asphalt.serialization.serializers.cbor:CBORSerializer [cbor]
    json = asphalt.serialization.serializers.json:JSONSerializer
    msgpack = asphalt.serialization.serializers.msgpack:MsgpackSerializer [msgpack]
    pickle = asphalt.serialization.serializers.pickle:PickleSerializer
    yaml = asphalt.serialization.serializers.yaml:YAMLSerializer [yaml]
